[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-program = { git = "https://github.com/Lightprotocol/solana", branch="v1.15" }
winnow = { git = "https://github.com/winnow-rs/winnow", tag="v0.4.1" }
