[package]
name = "psp-payment-streaming"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psp_payment_streaming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
merkle_tree_program = { path = "../../../../light-protocol-onchain/light-system-programs/programs/merkle_tree_program", features = ["cpi"] }
verifier_program_two = { path = "../../../../light-protocol-onchain/light-system-programs/programs/verifier_program_two", features = ["cpi"] }
light-macros = { path = "../../../../light-protocol-onchain/light-macros"}
light-verifier-sdk = {path = "../../../../light-protocol-onchain/light-verifier-sdk"}
solana-program = "1.15.2"
groth16-solana = "0.0.1"
